--- a/SAO-EP/Src/View Events.fx.yaml
+++ b/SAO-EP/Src/View Events.fx.yaml
@@ -78,6 +78,8 @@
                 Height: =570
                 Items: =Search(CalDeets,VE_SearchInput.Text,ActivityTitle,NameofLeadOrg)
                 Layout: =Layout.Vertical
+                LayoutMinHeight: =287
+                LayoutMinWidth: =320
                 LoadingSpinner: =LoadingSpinner.Data
                 TemplatePadding: =0
                 TemplateSize: =90
@@ -85,6 +87,9 @@
                 ZIndex: =1
 
                 Title9 As label:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    Color: =RGBA(71, 69, 64, 1)
+                    DisabledColor: =RGBA(186, 186, 186, 1)
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                     Height: =Self.Size * 1.8
                     OnSelect: =Select(Parent)
@@ -92,6 +97,7 @@
                     PaddingLeft: =0
                     PaddingRight: =0
                     PaddingTop: =0
+                    Size: =14
                     Text: =ThisItem.ActivityTitle
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.TemplateWidth - 86
@@ -100,6 +106,9 @@
                     ZIndex: =1
 
                 Subtitle6 As label:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    Color: =RGBA(71, 69, 64, 1)
+                    DisabledColor: =RGBA(186, 186, 186, 1)
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                     Height: =Self.Size * 1.8
                     OnSelect: =Select(Parent)
@@ -131,6 +140,7 @@
                     ZIndex: =3
 
                 Separator6 As rectangle:
+                    BorderColor: =RGBA(0, 0, 255, 1)
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =8
                     OnSelect: =Select(Parent)
