Changed logic in upload new apf

--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -411,6 +411,8 @@
                             )
                         )
                     Height: =32
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =96
                     OnSelect: |-
                         =ChangeApprovalStatus.Run(CurrentAPF_ID, CurrentUser.userRoles.Id, DropdownCanvas1.Selected.Value, {text_1:TextInputCanvas1.Value})
                     PaddingTop: =
