--- a/SAO-EP/Src/S-ManageAPF.fx.yaml
+++ b/SAO-EP/Src/S-ManageAPF.fx.yaml
@@ -70,12 +70,31 @@
             Visible: =If(And('S-ManageAPF'.Size = ScreenSize.Small, Or(newMode, editMode, itemSelected)), false, true)
             ZIndex: =5
 
-            SMapf_OrgSelector As dropdown:
-                AlignInContainer: |
-                    =AlignInContainer.Stretch
-                ChevronBackground: =RGBA(9, 33, 98, 1)
-                Items: =Organizations
+            Container21 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0.05
+                LayoutGap: =5
+                LayoutMinHeight: =50
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
                 ZIndex: =1
+
+                Dropdown4 As dropdown:
+                    AlignInContainer: =AlignInContainer.Stretch
+                    ChevronBackground: =RGBA(9, 33, 98, 1)
+                    FillPortions: =0.25
+                    Height: =Parent.Height
+                    Items: =Distinct(CalDeets, AcadYear)
+                    LayoutMinWidth: =135
+                    Width: =50
+                    ZIndex: =1
+
+                SMapf_OrgSelector As dropdown:
+                    AlignInContainer: =AlignInContainer.Stretch
+                    ChevronBackground: =RGBA(9, 33, 98, 1)
+                    FillPortions: =1
+                    Items: =Organizations
+                    LayoutMinWidth: =200
+                    ZIndex: =2
 
             OrgNameContainer_4 As groupContainer.horizontalAutoLayoutContainer:
                 Fill: =RGBA(245, 245, 245, 1)
@@ -84,7 +103,7 @@
                 LayoutMinHeight: =100
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =2
+                ZIndex: =3
 
                 Label3_4 As label:
                     Align: =Align.Center
@@ -100,7 +119,7 @@
                 LayoutMinHeight: =100
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =3
+                ZIndex: =4
 
                 Approvals_1 As icon:
                     Height: =44
@@ -118,7 +137,7 @@
                     Height: =44
                     HintText: ="Enter Org"
                     Width: =Parent.Width - (2*Approvals_1.Width)
-                    ZIndex: =2
+                    ZIndex: =3
 
                 SearchIcon1_3 As icon:
                     Height: =44
@@ -129,24 +148,30 @@
                     PaddingRight: =10
                     PaddingTop: =10
                     Width: =44
-                    ZIndex: =3
+                    ZIndex: =4
 
             RecordsListSeparator1_3 As rectangle:
                 AlignInContainer: =AlignInContainer.Stretch
                 Height: =1
                 LayoutMinWidth: =200
-                ZIndex: =4
+                ZIndex: =5
 
             "RecordsGallery1_3 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 '#CopilotOverlayLabel': ="Filtered"
                 Default: =CurrentItem
                 DelayItemLoading: =true
                 Fill: =RGBA(250, 250, 250, 1)
-                Items: |+
-                    =Search(Filter('APF Uploads','Name of Lead Org' = SMapf_OrgSelector.Selected.orgAcronym),SearchInput1_3.Text, Title, 'Activity Title')
-                    
-                    //Search(Filter('APF Uploads','Name of Lead Org' = "<insert_orgname_here>"),SearchInput1.Text, "Title", "Title")
-                    
+                Items: |-
+                    =Search(
+                        Filter(
+                            'APF Uploads',
+                            'Name of Lead Org' = SMapf_OrgSelector.Selected.orgAcronym &&
+                            Dropdown4.Selected.Value in ShowColumns(CalDeets,AcadYear) // Ensure this matches the correct column name
+                        ),
+                        SearchInput1_3.Text,
+                        Title,
+                        'Activity Title'
+                    )
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =0
@@ -156,7 +181,7 @@
                 TemplateFill: =If(Self.IsSelected, RGBA(230, 230, 230, 1), RGBA(0, 0, 0, 0))
                 TemplatePadding: =0
                 TemplateSize: =104
-                ZIndex: =5
+                ZIndex: =6
 
                 Title1_6 As label:
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
