--- a/SAO-EP/Src/S-ManageAPF.fx.yaml
+++ b/SAO-EP/Src/S-ManageAPF.fx.yaml
@@ -80,21 +80,44 @@
 
                 Dropdown4 As dropdown:
                     AlignInContainer: =AlignInContainer.Stretch
-                    ChevronBackground: =RGBA(9, 33, 98, 1)
+                    AllowEmptySelection: =true
+                    ChevronBackground: =RGBA(39, 113, 194, 1)
+                    Color: =
+                    Default: ="0"
                     FillPortions: =0.25
                     Height: =Parent.Height
                     Items: =Distinct(CalDeets, AcadYear)
                     LayoutMinWidth: =135
+                    Reset: =true
                     Width: =50
                     ZIndex: =1
 
+                ButtonCanvas9 As Button:
+                    DisplayMode: =DisplayMode.Edit
+                    FillPortions: =0.3
+                    Height: =Parent.Height
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: |
+                        =30
+                    OnSelect: =Reset(Dropdown4)
+                    Text: ="All"
+                    Width: |
+                        =30
+                    X: =0
+                    Y: =0
+                    ZIndex: =2
+
+                Icon15 As icon.VerticalLine:
+                    Icon: =Icon.VerticalLine
+                    Width: =10
+                    ZIndex: =3
+
                 SMapf_OrgSelector As dropdown:
-                    AlignInContainer: =AlignInContainer.Stretch
                     ChevronBackground: =RGBA(9, 33, 98, 1)
                     FillPortions: =1
+                    Height: =Parent.Height
                     Items: =Organizations
-                    LayoutMinWidth: =200
-                    ZIndex: =2
+                    ZIndex: =4
 
             OrgNameContainer_4 As groupContainer.horizontalAutoLayoutContainer:
                 Fill: =RGBA(245, 245, 245, 1)
@@ -166,7 +189,14 @@
                         Filter(
                             'APF Uploads',
                             'Name of Lead Org' = SMapf_OrgSelector.Selected.orgAcronym &&
-                            Dropdown4.Selected.Value in ShowColumns(CalDeets,AcadYear) // Ensure this matches the correct column name
+                            (
+                                IsBlank(Dropdown4.Selected.Value) || // Check if Dropdown4 is blank
+                                If(
+                                    Month(DateValue('Target Date')) = 8 || Month(DateValue('Target Date')) > 8,
+                                    Text(Year(DateValue('Target Date')), "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')) + 1, "[$-en-US]0"),
+                                    Text(Year(DateValue('Target Date')) - 1, "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')), "[$-en-US]0")
+                                ) = Dropdown4.Selected.Value // Compare derived academic year with selected value
+                            )
                         ),
                         SearchInput1_3.Text,
                         Title,
