--- a/SAO-EP/Src/S-ManageAPF.fx.yaml
+++ b/SAO-EP/Src/S-ManageAPF.fx.yaml
@@ -70,7 +70,7 @@
             Visible: =If(And('S-ManageAPF'.Size = ScreenSize.Small, Or(newMode, editMode, itemSelected)), false, true)
             ZIndex: =5
 
-            Container21 As groupContainer.horizontalAutoLayoutContainer:
+            Filtering As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0.05
                 LayoutGap: =5
                 LayoutMinHeight: =50
@@ -78,7 +78,7 @@
                 LayoutMode: =LayoutMode.Auto
                 ZIndex: =1
 
-                Dropdown4 As dropdown:
+                AcadYearSelector As dropdown:
                     AlignInContainer: =AlignInContainer.Stretch
                     AllowEmptySelection: =true
                     ChevronBackground: =RGBA(39, 113, 194, 1)
@@ -92,14 +92,14 @@
                     Width: =50
                     ZIndex: =1
 
-                ButtonCanvas9 As Button:
+                AY_AllBtn As Button:
                     DisplayMode: =DisplayMode.Edit
                     FillPortions: =0.3
                     Height: =Parent.Height
                     LayoutMinHeight: =32
                     LayoutMinWidth: |
                         =30
-                    OnSelect: =Reset(Dropdown4)
+                    OnSelect: =Reset(AcadYearSelector)
                     Text: ="All"
                     Width: |
                         =30
@@ -126,7 +126,7 @@
                 LayoutMinHeight: =100
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =3
+                ZIndex: =2
 
                 Label3_4 As label:
                     Align: =Align.Center
@@ -142,7 +142,7 @@
                 LayoutMinHeight: =100
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =4
+                ZIndex: =3
 
                 Approvals_1 As icon:
                     Height: =44
@@ -177,7 +177,7 @@
                 AlignInContainer: =AlignInContainer.Stretch
                 Height: =1
                 LayoutMinWidth: =200
-                ZIndex: =5
+                ZIndex: =4
 
             "RecordsGallery1_3 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 '#CopilotOverlayLabel': ="Filtered"
@@ -190,12 +190,12 @@
                             'APF Uploads',
                             'Name of Lead Org' = SMapf_OrgSelector.Selected.orgAcronym &&
                             (
-                                IsBlank(Dropdown4.Selected.Value) || // Check if Dropdown4 is blank
+                                IsBlank(AcadYearSelector.Selected.Value) || // Check if Dropdown4 is blank
                                 If(
                                     Month(DateValue('Target Date')) = 8 || Month(DateValue('Target Date')) > 8,
                                     Text(Year(DateValue('Target Date')), "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')) + 1, "[$-en-US]0"),
                                     Text(Year(DateValue('Target Date')) - 1, "[$-en-US]0") & "-" & Text(Year(DateValue('Target Date')), "[$-en-US]0")
-                                ) = Dropdown4.Selected.Value // Compare derived academic year with selected value
+                                ) = AcadYearSelector.Selected.Value // Compare derived academic year with selected value
                             )
                         ),
                         SearchInput1_3.Text,
@@ -211,7 +211,7 @@
                 TemplateFill: =If(Self.IsSelected, RGBA(230, 230, 230, 1), RGBA(0, 0, 0, 0))
                 TemplatePadding: =0
                 TemplateSize: =104
-                ZIndex: =6
+                ZIndex: =5
 
                 Title1_6 As label:
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
