--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -116,11 +116,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "e390e5fb-5671-4230-b5f5-5cf75afc7fd1",
-    "Id": "ed440894-d3c4-4bdb-b40e-0582c0b844f4",
+    "Id": "0ff98b50-2aef-4f42-92ad-93fc63c55797",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
-    "Name": "SAOEP_Finals",
+    "Name": "SAOEP_Finals.msapp",
     "OriginatingVersion": "1.296",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
