--- a/SAO-EP/Src/View APF.fx.yaml
+++ b/SAO-EP/Src/View APF.fx.yaml
@@ -3265,6 +3265,7 @@
                         CurrentUserOrg.orgAcronym,
                         CurrentUser.userEmail,
                         advEmail,
+                        'Confirm New APF Title'.Value,
                         {file:
                             {
                             contentBytes: First(FileAttachment_2.Attachments).Value,
